<resources>
    <string name="app_name">GranjaAplicacion</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="IniciarSesion">Inicia Sesión</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="olvide_contraseña">Olvidé mi contraseña</string>
    <string name="regresar">Regresar</string>
    <string name="selecciona_rol">Selecciona Tu Rol</string>
    <string name="informacionseleccion">Selecciona el rol con el que te gustaria iniciar sesión</string>
    <string name="granjero">Granjero</string>
    <string name="comprador">Comprador</string>
    <string name="socio">Socio</string>
    <string name="btn_seleccionar">Continuar</string>
    <string name="informacionCrear">Crear Cuenta</string>
    <string name="informacionCrearCuenta">Crea una cuenta para poder acceder a la aplicación</string>
    <string name="nombreCrearCuenta">Nombre</string>
    <string name="apellidoCrearCuenta">Apellido</string>
    <string name="correoCrearCuenta">Correo</string>
    <string name="contraseñaCrearCuenta">Contraseña</string>
    <string name="ConfircontraseñaCrearCuenta">Confirmar Contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="nombreGranja">Nombre de la Granja</string>
    <string name="nombreOrganizacion">Nombre de tu orgnanización</string>
    <string name="verificarCorreotxt">Verifica tu Correo</string>
    <string name="verificarCorreo">Ingresa el codigo de 5 digitos que ha llegado a tu correo</string>
    <string name="codigo">*</string>
    <string name="btn_verificar">Verificar</string>
    <string name="btn_pedirCodigo">Pedir un Codigo nuevo</string>

    <string name="ingresaCorreo">Ingresa tu correo</string>
    <string name="aceptar">Aceptar</string>
    <string name="inciotxt">Inicio</string>
    <string name="inicioinfotxt">¿Que deseas hacer hoy?</string>
    <string name="puntosdeventatxt">Puntos de venta</string>
    <string name="chattxt">Mis Productos \n (No disponible)</string>
    <string name="textoComprador">Estas Interactuando como : Comprador</string>
    <string name="textoGranjero">Estas Interactuando como : Granjero</string>
    <string name="textoSocio">Estas Interactuando como : Socio</string>
    <string name="textoproveedor">Buscar \n Proveedor \n (No Disponible)</string>
    <string name="mispuntosventa">Mis \n puntos \n de venta</string>
    <string name="textogranjero">Perfiles de \n Campesinos </string>
    <string name="historialPuntosVenta">Historial de puntos de \n venta</string>
    <string name="direccion">Dirección</string>
    <string name="estado">Estado</string>


    <string name="Calendario">Calendario</string>
    <string name="infoCale">Ingresa la fecha que deseas</string>
    <string name="btn_seleccionarFecha">Confirmar dia y hora</string>

    <string name="mapatxt">Mapa</string>
    <string name="infoMapa">Ingresar el punto de venta</string>
    <string name="ubicaciontxt">Digite la ubicación para guardar el punto \n de venta</string>
    <string name="btn_buscarPuntos">Buscar</string>
    <string name="btn_ubicacionactual">Usar mi ubicación actual</string>
    <string name="infoMapaComprador">Si deseas usar tu ubicación actual dale en el boton\n o Digita tu direccion</string>
    <string name="perfilesgranjerostxt">Perfiles Granjeros</string>
    <string name="perfilesmasbuscadostxt">Perfiles mas buscados</string>
    <string name="perfilesrecomendadostxt">Perfiles que te recomendados</string>
    <string name="perfilescumpleninteresestxt">Perfiles que cumplen tus intereses</string>
    <string name="nombredecuenta">Nombre</string>
    <string name="sobreMi">Sobre Mi</string>
    <string name="infoSobreMi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore \n et dolore magna aliqua. \nUt enim ad minim veniam.</string>
    <string name="misProductos">Mis productos</string>
    <string name="infoProducto">orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore \n et dolore magna aliqua. \nUt enim ad minim veniam</string>
    <string name="misCosechas">Mis Cosechas</string>
    <string name="puntcoscernostxt">Puntos cercanos a ti</string>
    <string name="tiendanombre1">Granja 1 </string>
    <string name="tiendanombre2">Granja 2 </string>
    <string name="tiendanombre3">Granja 3 </string>
    <string name="horariosydistanciatienda1">8:00AM - 12:00PM \n 3.8 Kilometros</string>
    <string name="horariosydistanciatienda2">9:00AM - 12:00PM \n 4 Kilometros</string>
    <string name="horariosydistanciatienda3">7:00AM - 10:00PM \n 7.3 Kilometros</string>
    <string name="btn_ubiacionactual">USAR MI UBICACIÓN ACTUAL</string>
    <string name="btn_horaIncio">Seleccione la hora de Inicio</string>
    <string name="btn_horaSalidad">Seleccione la hora de Salida</string>
    <string name="btn_confirmarDireccion">Confirmar</string>

    <string name="hora_salida">Hora Salida</string>
    <string name="hora_entrada">Hora Entrada</string>
    <string name="fecha">Fecha</string>
    <string name="nombre_Punto">Direccion del punto</string>
    <string name="ElementosVaciosG">No hay elementos que mostrar, por favor agrega un punto de venta</string>
    <string name="ElementosVaciosC">No hay puntos de venta disponible, por el momento</string>
    <string name="CancelarPunto">Cancelar punto de venta</string>
    <string name="textMapComprador">Ingresa tu dirección</string>
    <string name="ubicaciontxtComprador">Digite la ubicación para mostrar los puntos \n de venta cercanos</string>
    <string name="distanciaPuntoVenta">Distancia del punto de venta</string>

    <string name="direccionPunto">Dirección del punto de venta</string>
    <string name="sobremi">Sobre Mi</string>
    <string name="cargarproductostxt">Cargar Productos</string>
    <string name="perfil">Perfil</string>
    <string name="agregarProducto">Agregar Producto</string>
    <string name="nombreProducto">Nombre del Producto</string>
    <string name="precioProducto">Precio del Producto</string>
    <string name="cantidadProducto">Cantidad del Producto</string>
    <string name="descripcionProducto">Descripción del Producto</string>
    <string name="btn_cargar_producto">Cargar Producto</string>
    <string name="btn_tomar_foto">Tomar Foto del Producto</string>
    <string name="btn_subirproducto">Subir Imagen del Producto</string>
    <string name="imagenProducto">Imagen del producto</string>

    <string name="sobreMi_default">No ha proporcianado información</string>
</resources>