<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CargarProductos">


    <TextView
        android:id="@+id/TituloPrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/agregarProducto"
        android:textColor="#545f71"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/botonRegresarCargarProducto"
        android:layout_width="42dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/regresar"
        android:src="@mipmap/boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/nombreProducto"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloPrd" />

    <EditText
        android:id="@+id/precioProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/precioProducto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreProducto" />

    <EditText
        android:id="@+id/cantidadProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/cantidadProducto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioProducto" />

    <EditText
        android:id="@+id/descripcionProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/descripcionProducto"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidadProducto" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCargarProducto"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="260dp"
        android:background="#36CC7C"
        android:text="@string/btn_cargar_producto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionProducto" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTomarFotoProducto"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="420dp"
        android:background="#36CC7C"
        android:text="@string/btn_tomar_foto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SubirProducto"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="476dp"
        android:background="#36CC7C"
        android:text="@string/btn_subirproducto"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenProducto"
        android:layout_width="404dp"
        android:layout_height="133dp"
        android:layout_marginTop="116dp"
        android:hint="@string/imagenProducto"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>