<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HistorialPuntosdeVenta">

        <ImageView
            android:id="@+id/botonRegrasarPuntosVentasH"
            android:layout_width="42dp"
            android:layout_height="57dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/regresar"
            android:src="@mipmap/boton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textBienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="92dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/historialPuntosVenta"
            android:textColor="#545f71"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHistorial"
            android:layout_width="0dp"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textBienvenido"
            app:layout_constraintVertical_bias="0.266" />

        <include layout="@layout/layout_empty_view"
            android:id="@+id/textNoHayElementos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/CancelarPuntosVenta"
            android:layout_width="267dp"
            android:layout_height="42dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="672dp"
            android:background="#36CC7C"
            android:text="@string/CancelarPunto"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
